--- a/AdminPortal/src/app/components/sidebar/sidebar.component.css
+++ b/AdminPortal/src/app/components/sidebar/sidebar.component.css
@@ -29,7 +29,7 @@
 .sidebar-container {
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     margin-right: 10px;
 }
 
