--- a/AdminPortal/src/app/productdetails/bulkproductlist.component.html
+++ b/AdminPortal/src/app/productdetails/bulkproductlist.component.html
@@ -9,50 +9,212 @@
                     <div class="card-content">
                         <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
                             <mat-tab class="tab-border" label="Product Document">
-                                <div class="custom-file-upload-section">
-                                    <label for="images" class="drop-container" id="dropcontainer">
-                                        <span class="drop-title">Drag & Drop upload or browse to choose a file</span>
-                                        Supported formats: CSV, XLSX
-                                        <input type="file" #fileDocListInput class="bulk-file-input"
-                                            (change)="handleItemDocumentFileInput($event)">
-                                        <span>You can download sample file <a href="javascript:void(0)"
-                                                (click)="generateProductDocCsv()">here</a></span>
-                                    </label>
-                                    <div class="full-width-button-container">
-                                        <button style="width: auto;margin-top: 20px;float: none;" class="custom-btn" (click)="OnItemDocumentBulkUpload()">Upload Product
-                                            Document</button>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <div class="custom-file-upload-section">
+                                            <label for="images" class="drop-container" id="dropcontainer">
+                                                <span class="drop-title">Drag & Drop upload or browse to choose a
+                                                    file</span>
+                                                Supported formats: CSV, XLSX
+                                                <input type="file" #fileDocListInput class="bulk-file-input"
+                                                    (change)="handleItemDocumentFileInput($event)">
+                                            </label>
+                                            <div class="full-width-button-container">
+                                                <button style="width: auto;margin-top: 20px;float: none;"
+                                                    class="custom-btn" (click)="OnItemDocumentBulkUpload()">Upload
+                                                    Product
+                                                    Document</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="form-group form-black label-floating">
+                                            <span style="display: inline-block;">
+                                                <span style="font-weight: bold;">Steps</span>
+                                                <ol style="list-style-type: none; padding: 0; margin: 0;">
+                                                    <ul>
+                                                        <li>
+                                                            <span>Download sample file <a href="javascript:void(0)"
+                                                                    (click)="generateProductDocCsv()">here.</a></span>
+                                                        </li>
+                                                        <li>
+                                                            Update the file with valid data.
+                                                        </li>
+                                                        <li>
+                                                            Drag and drop the valid csv/xlsx file Or browse file manually
+                                                            using "Choose File" button.
+                                                        </li>
+                                                        <li>
+                                                            Click on "Upload Product Document" Button.
+                                                        </li>
+                                                    </ul>
+                                                </ol>
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
                             </mat-tab>
                             <mat-tab class="tab-border" label="Manufacturer Document">
-                                <div class="custom-file-upload-section">
-                                    <label for="images" class="drop-container" id="dropcontainer">
-                                        <span class="drop-title">Drag & Drop upload or browse to choose a file</span>
-                                        Supported formats: CSV, XLSX
-                                        <input type="file" #fileManuDocListInput class="bulk-file-input"
-                                            (change)="handleManufDocumentFileInput($event)">
-                                        <span>You can download sample file <a href="javascript:void(0)"
-                                                (click)="generateManufacturerDocCsv()">here</a></span>
-                                    </label>
-                                    <div class="full-width-button-container">
-                                        <button style="width: auto;margin-top: 20px;float: none;" class="custom-btn" (click)="OnManufacturerDocumentBulkUpload()">Upload Manufacturer
-                                            Document</button>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <div class="custom-file-upload-section">
+                                            <label for="images" class="drop-container" id="dropcontainer">
+                                                <span class="drop-title">Drag & Drop upload or browse to choose a
+                                                    file</span>
+                                                Supported formats: CSV, XLSX
+                                                <input type="file" #fileManuDocListInput class="bulk-file-input"
+                                                    (change)="handleManufDocumentFileInput($event)">
+                                            </label>
+                                            <div class="full-width-button-container">
+                                                <button style="width: auto;margin-top: 20px;float: none;"
+                                                    class="custom-btn"
+                                                    (click)="OnManufacturerDocumentBulkUpload()">Upload Manufacturer
+                                                    Document</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="form-group form-black label-floating">
+                                            <span style="display: inline-block;">
+                                                <span style="font-weight: bold;">Steps</span>
+                                                <ol style="list-style-type: none; padding: 0; margin: 0;">
+                                                    <ul>
+                                                        <li>
+                                                            <span>You can download sample file <a
+                                                                    href="javascript:void(0)"
+                                                                    (click)="generateManufacturerDocCsv()">here</a></span>
+                                                        </li>
+                                                        <li>
+                                                            Update the file with valid data.
+                                                        </li>
+                                                        <li>
+                                                            Drag and drop the valid csv/xlsx file Or Or browse file manually
+                                                            using "Choose File" button.
+                                                        </li>
+                                                        <li>
+                                                            Click on "Upload Product Document" Button.
+                                                        </li>
+                                                    </ul>
+                                                </ol>
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
                             </mat-tab>
                             <mat-tab class="tab-border" label="Product Price">
-                                <div class="custom-file-upload-section">
-                                    <label for="images" class="drop-container" id="dropcontainer">
-                                        <span class="drop-title">Drag & Drop upload or browse to choose a file</span>
-                                        Supported formats: CSV, XLSX
-                                        <input type="file" #filePriceListInput class="bulk-file-input"
-                                            (change)="handleItemPriceListFileInput($event)">
-                                        <span>You can download sample file <a href="javascript:void(0)"
-                                                (click)="generateProductPriceCsv()">here</a></span>
-                                    </label>
-                                    <div class="full-width-button-container">
-                                        <button  style="width: auto;margin-top: 20px;float: none;" class="custom-btn" (click)="OnItemPriceListBulkUpload()">Upload Product
-                                            Price</button>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <div class="custom-file-upload-section">
+                                            <label for="images" class="drop-container" id="dropcontainer">
+                                                <span class="drop-title">Drag & Drop upload or browse to choose a file</span>
+                                                Supported formats: CSV, XLSX
+                                                <input type="file" #filePriceListInput class="bulk-file-input"
+                                                    (change)="handleItemPriceListFileInput($event)">
+                                            </label>
+                                            <div class="full-width-button-container">
+                                                <button style="width: auto;margin-top: 20px;float: none;" class="custom-btn"
+                                                    (click)="OnItemPriceListBulkUpload()">Upload Product
+                                                    Price</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="form-group form-black label-floating">
+                                            <span style="display: inline-block;">
+                                                <span style="font-weight: bold;">Steps</span>
+                                                <ol style="list-style-type: none; padding: 0; margin: 0;">
+                                                    <ul>
+                                                        <li>
+                                                            <span>You can download sample file <a href="javascript:void(0)"
+                                                                (click)="generateProductPriceCsv()">here</a></span>
+                                                        </li>
+                                                        <li>
+                                                            Update the file with valid data.
+                                                        </li>
+                                                        <li>
+                                                            Drag and drop the valid csv/xlsx file Or Or browse file manually
+                                                            using "Choose File" button.
+                                                        </li>
+                                                        <li>
+                                                            Click on "Upload Product Document" Button.
+                                                        </li>
+                                                    </ul>
+                                                </ol>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                            </mat-tab>
+                            <mat-tab class="tab-border" label="Upload Folder">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <div class="custom-file-upload-section">
+                                            <label for="uploadfolder" class="drop-container" id="dropcontainer">
+                                                <span class="drop-title">Drag & Drop upload or browse to choose a
+                                                    file</span>
+                                                Supported formats: .zip
+                                                <input type="file" #uploadFolderInput class="bulk-file-input"
+                                                    (change)="handleUploadFolderInput($event)">
+                                            </label>
+                                            <div class="full-width-button-container">
+                                                <button style="width: auto;margin-top: 20px;float: none;"
+                                                    class="custom-btn" (click)="OnFolderUpload()">Upload Folder</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="form-group form-black label-floating">
+                                            <span style="display: inline-block;">
+                                                <span style="font-weight: bold;">Steps</span>
+                                                <ol style="list-style-type: none; padding: 0; margin: 0;">
+                                                    <ul>
+                                                        <li>
+                                                            create a zip file of the folder that you want to upload.
+                                                        </li>
+                                                        <li>
+                                                            drag and drop that zip file/choose file manually from file
+                                                            explorer using choose file button
+                                                        </li>
+                                                        <li>
+                                                            click on upload Folder button. once it get success in upload
+                                                            it will automatically download the csv file with the details
+                                                            of file name and it's url.
+                                                        </li>
+                                                        <li>
+                                                            Go to product Document tab and download the sample file from
+                                                            there and add the corresponding details with help of the
+                                                            downloded csv
+                                                            files.
+                                                        </li>
+                                                        <li>
+                                                            you can now choose that newly created csv file to bulk
+                                                            upload
+                                                            the document by clicking on Upload Product Document button.
+                                                        </li>
+                                                    </ul>
+                                                </ol>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-12">
+                                    <div *ngIf="fileDetails!=null && fileDetails!=undefined">
+                                        <table class="table">
+                                            <thead class="text-info">
+                                                <tr>
+                                                    <th>File Name</th>
+                                                    <th>URL</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr *ngFor="let fd of fileDetails">
+                                                    <td data-title="FileName">{{fd.fileName}}</td>
+                                                    <td data-title="URL">{{fd.filePath}}</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
                                     </div>
                                 </div>
                             </mat-tab>
