--- a/AdminPortal/src/app/productdetails/bulkproductlist.component.html
+++ b/AdminPortal/src/app/productdetails/bulkproductlist.component.html
@@ -10,7 +10,7 @@
                         <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
                             <mat-tab class="tab-border" label="Product Document">
                                 <div class="row">
-                                    <div class="col-6">
+                                    <div class="col-12 col-sm-12 col-md-12 col-lg-6 grid-w-100">
                                         <div class="custom-file-upload-section">
                                             <label for="images" class="drop-container" id="dropcontainer">
                                                 <span class="drop-title">Drag & Drop upload or browse to choose a
@@ -27,7 +27,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-6">
+                                    <div class="col-12 col-sm-12 col-md-12 col-lg-6 grid-w-100">
                                         <div class="form-group form-black label-floating">
                                             <span style="display: inline-block;">
                                                 <span style="font-weight: bold;">Steps</span>
