--- a/AdminPortal/src/app/productdetails/dialog-add-edit-product.html
+++ b/AdminPortal/src/app/productdetails/dialog-add-edit-product.html
@@ -24,7 +24,7 @@
                                     <div class="form-group form-black label-floating">
                                         <mat-form-field>
                                             <mat-select [(ngModel)]="selectedDocName" name="selectedDocName" required>
-                                                <mat-option *ngFor="let type of docName" [value]="type.value">
+                                                <mat-option *ngFor="let type of docName" [value]="type.key">
                                                     {{type.key}}
                                                 </mat-option>
                                             </mat-select>
